# table-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  changelog  emulators.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: windows-app.yml
.pyinstaller/: entry_point.py  requirements.txt  windows_app.spec
pyinstaller/: entry_point.py  requirements.txt  table_control.qrc  windows_app.spec
src/table_control/: __init__.py  __main__.py
src/table_control/assets/: about.txt
src/table_control/core/: commands.py  driver.py  pluginmanager.py  resource.py  utils.py  vector.py
src/table_control/gui/: __init__.py  application.py  connection.py  controller.py  dashboard.py  mainwindow.py  pluginmanager.py  positions.py  preferences.py  utils.py
src/table_control/plugins/: __init__.py  corvus.py  dummy.py  hydra2x.py  legacy_socket.py  logger.py  scpi_socket.py
src/table_control/plugins/appliances/: corvus.py  dummy.py  hydra2x.py
tests/: test_core_pluginmanager.py  test_core_utils.py  test_gui_positions.py
