[project]
name = "table-control"
version = "0.3.0"
authors = [
    {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"}
]
description = "Generic 3-axis table control software."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: PyQt5",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.13"
dependencies = [
    "PySide6==6.8.3",
    "PyVISA==1.14.1",
    "PyVISA-py==0.7.2"
]

[project.urls]
Homepage = "https://www.oeaw.ac.at/en/hephy/research/detector-development"
Repository = "https://github.com/hephy-dd/table-control"
Documentation = "https://github.com/hephy-dd/table-control"

[project.scripts]
table-control = "table_control.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"table_control.assets" = ["*.txt"]
"table_control.assets.icons" = ["*.svg", "*.ico"]
