[project]
name = "table-control"
version = "0.7.0"
authors = [
    {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"}
]
description = "Generic 3-axis table control software."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "motion-control",
    "3-axis",
    "instrumentation",
    "PySide6",
    "VISA",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.13"
dependencies = [
    "PySide6==6.9.1",
    "PyVISA==1.14.1",
    "PyVISA-py==0.7.2",
]

[project.urls]
Homepage = "https://www.oeaw.ac.at/en/mbi/research/detector-development"
Repository = "https://github.com/hephy-dd/table-control"
Documentation = "https://github.com/hephy-dd/table-control"

[project.scripts]
table-control = "table_control.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
